some correction on the reste function
